# mcp-bridge

./: Cargo.toml  README.md  content  package-lock.json  package.json  r.sh
.github/workflows/: ci.yaml  release.yaml
conf/: config.json  config.yaml  mcp_tools.json
src/: bridge.rs  config.rs  lib.rs  main.rs  process.rs  sse_server.rs
src/bridge/: connection.rs  core.rs  message_handler.rs  mod.rs  process_handler.rs  utils.rs
src/transports/: mod.rs  mqtt.rs  websocket.rs
tests/: integration_tests.rs
